# charconv-constexpr-proposal

./: .travis.yml  CMakeLists.txt  LICENSE  NOTICE  README.md
include/: CMakeLists.txt  charconv.hpp  charconv_integral.hpp  detail.hpp
include/charconv/: charconv.hpp
include/charconv/detail/: detail.hpp  entity.hpp
include/charconv/floating_point/: big_integer.hpp  bit_cast.hpp  charconv_floating_point.hpp  floating_point_from_chars.hpp  floating_point_to_chars.hpp  floating_traits.hpp  ryu.hpp  ryu_tables.hpp
include/charconv/integral/: charconv_integral.hpp  integral_from_chars.hpp  integral_to_chars.hpp
include/detail/: bit_cast.hpp  charconv_detail.hpp  charconv_entity.hpp  charconv_integral_from_chars.hpp  charconv_integral_to_chars.hpp  detail.hpp  floating_traits.hpp  ieee754.hpp
test/: CMakeLists.txt  catch_main.cpp  charconv_integral.cpp  double_fixed_precision_to_chars_test_cases_1.hpp  double_fixed_precision_to_chars_test_cases_2.hpp  double_fixed_precision_to_chars_test_cases_3.hpp  double_fixed_precision_to_chars_test_cases_4.hpp  double_from_chars_test_cases.hpp  double_general_precision_to_chars_test_cases.hpp  double_hex_precision_to_chars_test_cases.hpp  double_scientific_precision_to_chars_test_cases_1.hpp  double_scientific_precision_to_chars_test_cases_2.hpp  double_scientific_precision_to_chars_test_cases_3.hpp  double_scientific_precision_to_chars_test_cases_4.hpp  double_to_chars_test_cases.hpp  float_fixed_precision_to_chars_test_cases.hpp  float_from_chars_test_cases.hpp  float_general_precision_to_chars_test_cases.hpp  float_hex_precision_to_chars_test_cases.hpp  float_scientific_precision_to_chars_test_cases.hpp  float_to_chars_test_cases.hpp  floating_point_test_cases.hpp  test.cpp  test.cxx  test.hpp  test_bit_cast.cpp  test_bits.cpp  test_constexpr_floating_point.cpp  test_constexpr_integral.cpp  test_floating_point.cpp  test_integral.cpp  test_nstd_bits.cpp
